deploy: c1c4acc46449166af0688553ab74ad0c5a4248f5

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -33,6 +33,9 @@
 <li><a href="python2verilog/backend/verilog/ast.html">python2verilog.backend.verilog.ast</a></li>
 <li><a href="python2verilog/backend/verilog/codegen.html">python2verilog.backend.verilog.codegen</a></li>
 <li><a href="python2verilog/backend/verilog/config.html">python2verilog.backend.verilog.config</a></li>
+<li><a href="python2verilog/backend/verilog/fsm.html">python2verilog.backend.verilog.fsm</a></li>
+<li><a href="python2verilog/backend/verilog/module.html">python2verilog.backend.verilog.module</a></li>
+<li><a href="python2verilog/backend/verilog/testbench.html">python2verilog.backend.verilog.testbench</a></li>
 <li><a href="python2verilog/exceptions.html">python2verilog.exceptions</a></li>
 <li><a href="python2verilog/ir/context.html">python2verilog.ir.context</a></li>
 <li><a href="python2verilog/ir/expressions.html">python2verilog.ir.expressions</a></li>
