--- a/_modules/python2verilog/backend/verilog/config.html
+++ b/_modules/python2verilog/backend/verilog/config.html
@@ -33,14 +33,14 @@
 <span class="sd">Configurations</span>
 <span class="sd">&quot;&quot;&quot;</span>
 
-<span class="kn">from</span> <span class="nn">dataclasses</span> <span class="kn">import</span> <span class="n">dataclass</span>
+<span class="kn">from</span> <span class="nn">dataclasses</span> <span class="kn">import</span> <span class="n">dataclass</span><span class="p">,</span> <span class="n">field</span>
 
 <span class="kn">from</span> <span class="nn">python2verilog.utils</span> <span class="kn">import</span> <span class="n">env</span>
 
 
 <div class="viewcode-block" id="TestbenchConfig">
 <a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.config.TestbenchConfig">[docs]</a>
-<span class="nd">@dataclass</span>
+<span class="nd">@dataclass</span><span class="p">(</span><span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 <span class="k">class</span> <span class="nc">TestbenchConfig</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Configurations for test bench code generator</span>
@@ -53,17 +53,16 @@
 
 <div class="viewcode-block" id="CodegenConfig">
 <a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.config.CodegenConfig">[docs]</a>
-<span class="nd">@dataclass</span>
+<span class="nd">@dataclass</span><span class="p">(</span><span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 <span class="k">class</span> <span class="nc">CodegenConfig</span><span class="p">(</span><span class="n">TestbenchConfig</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Configurations for code generator</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="c1"># Enable debug comments graph elements as comment</span>
-    <span class="n">add_debug_comments</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span>
-
-    <span class="k">def</span> <span class="nf">__post_init__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">add_debug_comments</span> <span class="o">|=</span> <span class="nb">bool</span><span class="p">(</span><span class="n">env</span><span class="o">.</span><span class="n">get_var</span><span class="p">(</span><span class="n">env</span><span class="o">.</span><span class="n">Vars</span><span class="o">.</span><span class="n">DEBUG_COMMENTS</span><span class="p">))</span></div>
+    <span class="n">add_debug_comments</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span>
+        <span class="n">default_factory</span><span class="o">=</span><span class="k">lambda</span><span class="p">:</span> <span class="nb">bool</span><span class="p">(</span><span class="n">env</span><span class="o">.</span><span class="n">get_var</span><span class="p">(</span><span class="n">env</span><span class="o">.</span><span class="n">Vars</span><span class="o">.</span><span class="n">DEBUG_COMMENTS</span><span class="p">))</span>
+    <span class="p">)</span></div>
 
 </pre></div>
 
